fixed errors with contact form on tablet media query

--- a/small-screen.css
+++ b/small-screen.css
@@ -214,6 +214,7 @@ and (min-height:1000px) {
     .skillset {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         width: 90%;
     }
 
@@ -240,13 +241,14 @@ and (min-height:1000px) {
     
     .grid2 {
         grid-template-columns: repeat(2, auto);
-        grid-template-rows: repeat(2, 150px);
+        grid-template-rows: repeat(2, 180px);
         gap: 10px 10px;
         padding: 20px 30px 20px 30px;
     }
 
     .contact-me input, textarea{
-        width: 100%
+        width: 100%;
+        border: 2px solid #ccc;
       }
 
       .col-25 {
@@ -262,6 +264,14 @@ and (min-height:1000px) {
         width: 65%;
         margin-top: 6px;
       }
+
+      .top-of-page {
+        position: fixed;
+        right: 1rem;
+        bottom: .5rem;
+        min-height: 60px; 
+        min-width: 60px;
+    }
 }
 
   /* TABLET SCREENS HORIZONTALLY */
